[parsing] Removed Apache POI/PDFBox fallback